<resources>
    <string name="app_name">Test Application</string>
    <string name="long_text">It was sunny and very hot today. I got up early and helped my parents cook breakfast. Then I washed the dishes and cleaned the room. After a short rest I did my homework in the morning. In the afternoon I went swimming in the nearest swimming pool with my friends. It was really cool to swim in such a hot day. I surfed the internet and read a storybook in the evening. I really had a busy and happy day. It was sunny and very hot today. I got up early and helped my parents cook breakfast. Then I washed the dishes and cleaned the room. After a short rest I did my homework in the morning. In the afternoon I went swimming in the nearest swimming pool with my friends. It was really cool to swim in such a hot day. I surfed the internet and read a storybook in the evening. I really had a busy and happy day. It was sunny and very hot today. I got up early and helped my parents cook breakfast. Then I washed the dishes and cleaned the room. After a short rest I did my homework in the morning. In the afternoon I went swimming in the nearest swimming pool with my friends. It was really cool to swim in such a hot day. I surfed the internet and read a storybook in the evening. I really had a busy and happy day. It was sunny and very hot today. I got up early and helped my parents cook breakfast. Then I washed the dishes and cleaned the room. After a short rest I did my homework in the morning. In the afternoon I went swimming in the nearest swimming pool with my friends. It was really cool to swim in such a hot day. I surfed the internet and read a storybook in the evening. I really had a busy and happy day. It was sunny and very hot today. I got up early and helped my parents cook breakfast. Then I washed the dishes and cleaned the room. After a short rest I did my homework in the morning. In the afternoon I went swimming in the nearest swimming pool with my friends. It was really cool to swim in such a hot day. I surfed the internet and read a storybook in the evening. I really had a busy and happy day. </string>
    <string name="title_text">Sign Up</string>
    <string name="notice">我也不知道这个文本框该输入点什么\n233333</string>
    <string name="submit_button">Register</string>
    <string name="add_photo_tips">添加头像</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
</resources>